# turn-engine

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  README.md  main.cpp
.github/: pull_request_template.md
.github/workflows/: clang-format-checker.yml  cmake-single-platform.yml  release.yml
cmake/: TurnEngineConfig.cmake.in
example/: main.cpp
example/entities/: Camera.cpp
include/TurnEngine/: Engine.hpp  TurnEngine.hpp
include/TurnEngine/core/: Area2D.hpp  Drawable.hpp  Event.hpp  IDrawable.hpp  IObject2D.hpp  IObserver.hpp  ISubject.hpp  Object.hpp  Object2D.hpp  Observer.hpp  Responsible.hpp  Scene.hpp  Subject.hpp
include/TurnEngine/core/event/: Command.hpp  Event.hpp
include/TurnEngine/ext/: Math.hpp
include/TurnEngine/geo2d/: Shapes.hpp  Vector.hpp
include/TurnEngine/geo2d/shapes/: Hexagon.hpp  Rectangle.hpp  Shape.hpp
include/TurnEngine/gui/: BaseButton.hpp  BaseWidget.hpp  Button.hpp  GridHexagon.hpp  GridRectangle.hpp  Label.hpp  Sprite.hpp  Widget.hpp
include/TurnEngine/render/: DrawComparator.hpp  Drawer.hpp
include/TurnEngine/shapes/: Points.hpp
include/TurnEngine/wrapper/: Audio.hpp  Color.hpp  Cursor.hpp  Enums.hpp  Event.hpp  Font.hpp  Init.hpp  MessageBox.hpp  Pixel.hpp  Renderer.hpp  Shapes.hpp  Surface.hpp  Texture.hpp  Utils.hpp  Window.hpp
include/turn-engine/: Engine.hpp  TurnEngine.hpp
include/turn-engine/ext/: Types.hpp
include/turn-engine/ext/types/: Enum.hpp  Option.hpp  Result.hpp
include/turn-engine/geo2d/: Vector.hpp
include/turn-engine/geo2d/shapes/: Hexagon.hpp  Rectangle.hpp  Shape.hpp
include/turn-engine/math/shapes/: Hexagon.hpp  Shape.hpp
include/turn-engine/sdl/: Rect.hpp  Renderer.hpp  SDL.hpp  SDLCC.hpp  Surface.hpp  Texture.hpp  Window.hpp
src/: Engine.cpp
src/core/: Area2D.cpp  Drawable.cpp  Event.cpp  Object.cpp  Object2D.cpp  Observer.cpp  Responsible.cpp  Scene.cpp  Subject.cpp
src/gui/: BaseButton.cpp  BaseWidget.cpp  Button.cpp  GridHexagon.cpp  GridRectangle.cpp  Label.cpp  Sprite.cpp  Widget.cpp
src/math/: Math.hpp  Shape.hpp  Vector.hpp
src/math/shapes/: Hexagon.hpp  Rectangle.hpp  Shape.hpp
src/render/: DrawComparator.cpp  Drawer.cpp
src/sdl/: Rect.cpp  Renderer.cpp  Renderer.hpp  SDL.cpp  SDL.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/wrapper/: Audio.cpp  Cursor.cpp  Event.cpp  Font.cpp  MessageBox.cpp  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp
tests/: ExtTests.cpp  Geo2dTests.cpp  MathTests.cpp  SdlTests.cpp  run_tests.sh
tests_ui/: SdlGraphicsTest.cpp
tunet/: CMakeLists.txt
uitests/: SdlTests.cpp
